--- a/examples/SOES_CIA402_AX58100/platformio.ini
+++ b/examples/SOES_CIA402_AX58100/platformio.ini
@@ -17,5 +17,11 @@ board = disco_f407vg
 build_flags = 
     -D HSE_VALUE=8000000U
     -D AX58100
+;    -xc++
+;    --std=c++20
+;    -fpermissive
+
+build_unflags = 
+;    -nostdlib
 
 monitor_speed = 115200
